kubernetes/flux/clusters/talos-cluster/infra/cilium/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-http
  namespace: kube-system
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`hubble.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-https
  namespace: kube-system
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`hubble.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: hubble-ui
      port: 80
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: hubble-ingress-tls
